--- a/k8s.yaml
+++ b/k8s.yaml
@@ -39,6 +39,18 @@ spec:
               memory: "256Mi"
           ports:
             - containerPort: 8000
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8000
+            initialDelaySeconds: 3
+            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
